--- a/src/app/content-card/content-card.component.html
+++ b/src/app/content-card/content-card.component.html
@@ -1,13 +1,13 @@
 <div>
-    <img src="{{ content.imgUrl }}" alt="" (click)="displayId(content.id)">
+    <img src="{{ content.imgUrl }}" (click)="displayId(content.id)">
     <p class="body">Body: {{ content.body }}</p>
     <p class="author">Author: {{ content.author }}</p>
     <p class="title">Title: {{ content.title }}</p>
     <p class="type">Type: {{ content.type }}</p>
     <section class="tags" *ngIf="content.tags">
         Tags:
-        <ul *ngFor="let tag of content.tags">
-            <li>{{ tag }}</li>
+        <ul class="tags" *ngFor="let tag of content.tags">
+            <li class="tag">{{ tag }}</li>
         </ul>
     </section>
 </div>
