made my code more sexy!!!!

--- a/src/app/content-list/content-list.component.html
+++ b/src/app/content-list/content-list.component.html
@@ -1,7 +1,7 @@
 
 <section class="findItem">
-    <input placeholder="Item title" #itemTitle> 
-    <strong></strong> 
+    <input placeholder="Item title" #itemTitle>
+    <strong id="output"></strong> 
     <br>
     <button (click)="findItem(itemTitle.value)">Find that item!</button>
 </section>
