--- a/src/app/content-card/content-card.component.html
+++ b/src/app/content-card/content-card.component.html
@@ -12,7 +12,7 @@
     
     <p class="body">Body: {{ content.body }}</p>
     <p class="author">Author: {{ content.author }}</p>
-    <p appUnderline class="title">Title: {{ content.title }}</p>
+    <p appTextDecoration class="title">Title: {{ content.title }}</p>
     <p class="type">Type: {{ content.type }}</p>
     <section class="tags" *ngIf="content.tags">
         Tags:
