--- a/src/app/create-content/create-content.component.html
+++ b/src/app/create-content/create-content.component.html
@@ -1,12 +1,13 @@
 
 <h1>Create new Content:</h1>
 
-<div class="inputs">
-    Title: <input placeholder="Title" #title> <br/>
-    Author: <input placeholder="Author" #author> <br/>
-    Body: <input placeholder="Body" #body> <br/>
-    Type: <input placeholder="Type" #type> <br/>
-    imgUrl: <input placeholder="imgUrl" #imgUrl> <br/>
-    Tags: <input placeholder="Tags" #tags> <br/>
-    <button (click)="submit(title.value, author.value, body.value, type.value, imgUrl.value, tags.value)">Add Content!</button>
+<div class="form">
+    Title: <input [(ngModel)]="title" type="text" name="title"><br>
+    Author: <input [(ngModel)]="author" type="text" name="author"><br>
+    Body:  <input [(ngModel)]="body" type="text" name="body"><br>
+    Type: <input [(ngModel)]="type" type="text" name="type"><br>
+    Image: <input [(ngModel)]="imgUrl" type="text" name="imgUrl"><br>
+    Tags: <input [(ngModel)]="tags" type="text" name="tags"><br>
+    <button (click)="submit(title, author, body, type, imgUrl, tags)"> Submit </button>
+    <div class="error">{{this.error}}</div>
 </div>
