--- a/src/app/content-card/content-card.component.html
+++ b/src/app/content-card/content-card.component.html
@@ -1,23 +1,28 @@
-<div>
-    <div class="imgContainer" [ngSwitch]='content.imgUrl'>
-        <img *ngSwitchCase=" undefined "src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1" (click)="displayId(content.id)">
-        <p *ngSwitchCase=" undefined ">Default Img (imgUrl - undefined property)</p>
+<mat-card class="ContentCard">
+    <mat-card-header>
+        <mat-card-title class="id">{{content.id}}</mat-card-title>
+        <mat-card-subtitle class="author">{{content.author}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-divider></mat-divider>
+        <div class="imgContainer" [ngSwitch]='content.imgUrl'>
+            <img *ngSwitchCase=" undefined "src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1" (click)="displayId(content.id)">
+            <p *ngSwitchCase=" undefined ">Default Img (imgUrl - undefined property)</p>
 
-        <img *ngSwitchCase=" '' "src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1" (click)="displayId(content.id)">
-        <p *ngSwitchCase=" '' ">Default Img (imgUrl - no value)</p>
+            <img *ngSwitchCase=" '' "src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1" (click)="displayId(content.id)">
+            <p *ngSwitchCase=" '' ">Default Img (imgUrl - no value)</p>
 
-        <img *ngSwitchDefault src="{{ content.imgUrl }}" (click)="displayId(content.id)">
-        <p *ngSwitchDefault>Card Img</p>
-    </div>
-    
-    <p class="body">Body: {{ content.body }}</p>
-    <p class="author">Author: {{ content.author }}</p>
-    <p appTextDecoration class="title">Title: {{ content.title }}</p>
-    <p class="type">Type: {{ content.type }}</p>
-    <section class="tags" *ngIf="content.tags">
-        Tags:
-        <ul class="tags" *ngFor="let tag of content.tags">
-            <li class="tag">{{ tag }}</li>
-        </ul>
-    </section>
-</div>
+            <img *ngSwitchDefault src="{{ content.imgUrl }}" (click)="displayId(content.id)">
+            <p *ngSwitchDefault>Card Img</p>
+        </div (click)="displayID(item)">
+
+        <p class="type">{{content.type}}</p>
+        <p class="title" appHighlight >{{content.title}}</p>
+        <p class="body">{{content.body}}</p>
+        <div class="tags" *ngIf="content.tags">
+            <div class="tags">
+                Tags:{{content.tags}}
+            </div>
+        </div>
+    </mat-card-content>
+</mat-card>
