--- a/src/app/create-content/create-content.component.html
+++ b/src/app/create-content/create-content.component.html
@@ -1,7 +1,7 @@
 
 <h1>Create new Content:</h1>
 
-<div class="form">
+<!-- <div class="form">
     Title: <input [(ngModel)]="title" type="text" name="title"><br>
     Author: <input [(ngModel)]="author" type="text" name="author"><br>
     Body:  <input [(ngModel)]="body" type="text" name="body"><br>
@@ -10,4 +10,6 @@
     Tags: <input [(ngModel)]="tags" type="text" name="tags"><br>
     <button (click)="submit(title, author, body, type, imgUrl, tags)"> Submit </button>
     <div class="error">{{this.error}}</div>
-</div>
+</div> -->
+
+<div><button mat-raised-button color="primary" (click)="openDialog()">Submit</button></div>
