finished and updated

--- a/src/app/content-card/content-card.component.html
+++ b/src/app/content-card/content-card.component.html
@@ -5,16 +5,8 @@
     </mat-card-header>
     <mat-card-content>
         <mat-divider></mat-divider>
-        <div class="imgContainer" [ngSwitch]='content.imgUrl'>
-            <img *ngSwitchCase=" undefined "src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1" (click)="displayId(content.id)">
-            <p *ngSwitchCase=" undefined ">Default Img (imgUrl - undefined property)</p>
 
-            <img *ngSwitchCase=" '' "src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1" (click)="displayId(content.id)">
-            <p *ngSwitchCase=" '' ">Default Img (imgUrl - no value)</p>
-
-            <img *ngSwitchDefault src="{{ content.imgUrl }}" (click)="displayId(content.id)">
-            <p *ngSwitchDefault>Card Img</p>
-        </div (click)="displayID(item)">
+        <!-- <img class="image" src="{{ content.imgUrl || 'https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets.materialup.com%2Fuploads%2F30080ad4-97ee-47f7-a98a-c0d2e8d704b2%2Fpreview&f=1&nofb=1' }}"  alt ="" (click)="displayId(content.id)"> -->
 
         <p class="type">{{content.type}}</p>
         <p class="title" appHighlight >{{content.title}}</p>
