--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-messages></app-messages>
-<app-content-list></app-content-list>
+<!-- <app-messages></app-messages>
+<app-content-list></app-content-list> -->
+
+<a routerLink="" routerLinkActive="active"> Home </a><br>
+<router-outlet></router-outlet>
